# mafia-acp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  update_agent_registration.py
.state/: idempotency.db
docs/: AGENT_REGISTRATION.md  DEPLOYMENT_PLAN_GEM.md  IMPLEMENTATION_PLAN.md  JOB_SCHEMAS.md  MAFIA_ACP_AGENT_ARCHITECTURE.md  TESTING_AND_GRADUATION.md
scripts/: diagnose_nonce.py  diagnose_send.py  inspect_job_status.py  test_fear_and_greed.py  test_job_handler.py  test_local_market_sentiment.py
src/: __main__.py  main.py
src/agent/: config.py  offerings.py  router.py
src/data/: cache.py  fear_and_greed.py  idempotency.py  models.py  terminal_feed.py
src/intelligence/: ai_narrator.py  fear_and_greed.py  market_analysis.py  signal_detector.py
tests/: test_fear_and_greed.py  test_idempotency.py  test_intelligence.py  test_market_analysis.py  test_router_and_market_handler.py  test_terminal_feed.py
