[project]
name = "mafia-acp"
version = "0.1.0"
description = "Market intelligence and conditional execution orchestrator for Virtuals ACP"
requires-python = ">=3.11"
dependencies = [
    "virtuals-acp>=0.3.8",
    "httpx>=0.27",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
mafia = "src.main:main_sync"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
